...
              ),
              trailing: IconButtonMediumDark(
                isBackgroundColor: false,
                onTap: () {
                  ScaffoldMessenger.of(context).hideCurrentSnackBar();
                },
                key: const Key('messageButton'),
                icon: iconTrailing,
              ),
            ),
          ),
        );
}
...
