...
                    MenuItem(
                      text: firstText,
                      icon: firstIcon,
                      onPressed: firstOnPressed,
                    ),
                    MenuItem(
                      key: const Key('productsNavigator'),
                      text: secoundText,
                      icon: secoundIcon,
                      onPressed: secoundOnPressed,
                    ),
                    MenuItem(
                      text: thirdText,
...
                    ),
                    const DividerDefault(),
                    MenuItem(
                      text: fourthText,
                      icon: fourthIcon,
                      onPressed: fourthOnPressed,
                      key: const Key('myStoreNavigator'),
                    ),
                  ],
                ),
              ],
            ),
            MenuItem(
...
