...
          itemCount:
              productController.productFilterListActiveByStore?.length ?? 0,
          itemBuilder: (context, index) {
            final product =
                productController.productFilterListActiveByStore?[index];
            return ProductItem(
              key: const Key("selectItemProduct"),
              icon: IconConstant.remove,
              onTapIcon: () => showCustomModalBottomSheet(
                context: context,
                builder: (context) => ModalSheet(
                  iconBack: IconConstant.arrowLeft,
                  title: TextConstant.suspendProductTitle,
...
