...
                )),
                const SizedBox(
                  width: SizeToken.sm,
                ),
                Expanded(
                  child: ButtonProgress(
                    key: const Key("confirm"),
                    isLoading: isLoading,
                    text: continueText,
                    onPressed: continueOnTap,
                  ),
                )
              ],
...
