...
                ),
                icon != null
                    ? Positioned(
                        top: SizeToken.xs,
                        right: SizeToken.xs,
                        child: IconButtonMediumDark(
                            key: const Key("openModalConfirmProduct"),
                            onTap: onTapIcon!,
                            icon: icon!),
                      )
                    : const SizedBox.shrink()
              ],
            ),
...
